--- a/OTADemo/OTADemo.csproj
+++ b/OTADemo/OTADemo.csproj
@@ -197,7 +197,6 @@
     <None Include="OTAXSD\OTA_VehResRS.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Properties\PublishProfiles\v2-uat-xmldemo-as - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="RequestModels\OTA_VehAvailRateV2.xml" />
     <Content Include="RequestModels\OTA_VehAvailRate.xml" />
@@ -277,6 +276,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
